--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".main.authorization.SignUpActivity"></activity>
+        <activity android:name=".main.authorization.Registration.SignUpActivity"></activity>
         <activity android:name=".main.authorization.ResetPasswordActivity"></activity>
         <activity android:name=".main.authorization.login.LoginActivity"></activity>
     </application>
