профиль, еще совсем не доделаный

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:18.0.0'
     implementation 'com.google.firebase:firebase-firestore:20.1.0'
     implementation 'com.google.firebase:firebase-storage:18.1.0'
+    implementation 'com.firebaseui:firebase-ui-storage:4.3.1'
 
     implementation 'com.gjiazhe:PanoramaImageView:1.0'
 
