--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:18.1.0'
     implementation 'com.firebaseui:firebase-ui-storage:4.3.1'
 
+    implementation 'com.flipboard:bottomsheet-core:1.5.3'
+    implementation 'com.flipboard:bottomsheet-commons:1.5.3'
+
     implementation 'com.gjiazhe:PanoramaImageView:1.0'
 
     testImplementation 'junit:junit:4.13-beta-3'
