--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
 
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
 
+    implementation "com.google.android.material:material:$version"
+    implementation "com.hendraanggrian.material:collapsingtoolbarlayout-subtitle:1.0.0"
+
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
