language levels and debug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,9 +25,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".main.authorization.ResetPasswordActivity"></activity>
-        <activity android:name=".main.authorization.login.LoginActivity"></activity>
-        <activity android:name=".main.authorization.Registration.RegistrationActivity" />
+        <activity android:name=".main.authorization.ResetPasswordActivity"
+            android:theme="@style/WhiteAppTheme"/>
+        <activity android:name=".main.authorization.login.LoginActivity"
+            android:theme="@style/WhiteAppTheme"/>
+        <activity android:name=".main.authorization.Registration.RegistrationActivity"
+            android:theme="@style/WhiteAppTheme"/>
     </application>
 
 </manifest>
