--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
 
     testImplementation 'junit:junit:4.13-beta-3'
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     implementation 'com.google.dagger:dagger:2.23.2'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.23.2'
 
