--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.1.0-alpha08'
 
+    implementation 'fr.tvbarthel.blurdialogfragment:lib:2.2.0'
+
     implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
     implementation 'androidx.navigation:navigation-fragment:2.1.0-beta02'
     implementation 'androidx.navigation:navigation-ui:2.1.0-beta02'
